--- a/templates/rot_thirteen.html
+++ b/templates/rot_thirteen.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <form method="post">
-    <textarea style="margin-top: 20px; margin-left: 20px" rows="20" cols="100" name="input_text">{{input_text}}</textarea>
+    <textarea style="margin-top: 20px; margin-left: 20px" rows="20" cols="100" name="text">{{input_text}}</textarea>
     <br>
     <input style="margin-top:20px; margin-left: 20px" type="submit">
 </form>
